syntax = "proto3";

package distribution;

import "codec.proto";

// Revenue represents an account with funds collected from the fees. This is a
// temporary account used for storing fees that are later distributed between
// the owners.
message Revenue {
  weave.Metadata metadata = 1;
  // Admin key belongs to the governance entities. It can be used to transfer
  // stored amount to an another account.
  // While not enforced it is best to use a multisig contract here.
  bytes admin = 2 ;
  // Destinations holds any number of addresses that the collected revenue is
  // distributed to. Must be at least one.
  repeated Destination destinations = 3;
  // Address of this entity. Set during creation and does not change.
  bytes address = 4 ;
}

message Destination {
  // An address that the funds should be transferred to.
  // This should not be the validator addresses, as the keys used to sign
  // blocks should never be in a wallet. This can be the wallets of the admins
  // of the validators.
  bytes address = 1 ;
  // Weight defines what part of the total revenue goes to this destination.
  // Each destination receives part of the total revenue amount proportional to
  // the weight. For example, if there are two destinations with weights 1 and 2
  // accordingly, distribution will be 1/3 to the first address and 2/3 to the
  // second one.
  int32 weight = 2;
}

// CreateMsg is issuing the creation of a new revenue stream instance.
message CreateMsg {
  weave.Metadata metadata = 1;
  // Admin key belongs to the governance entities. It can be used to transfer
  // stored amount to an another account.
  // While not enforced it is best to use a multisig contract here.
  bytes admin = 2 ;
  // Destinations holds any number of addresses that the collected revenue is
  // distributed to. Must be at least one.
  repeated Destination destinations = 3;
}

// DistributeMsg is a request to distribute all funds collected within a single
// revenue instance. Revenue is distributed between destinations. Request must be
// signed using admin key.
message DistributeMsg {
  weave.Metadata metadata = 1;
  // Revenue ID reference an ID of a revenue instance that the collected fees
  // should be distributed between destinations.
  bytes revenue_id = 2 ;
}

// ResetMsg change the configuration of a revenue instance.
// To assure destinations that they will receive money, every revenue update is
// forcing funds distribution. Before applying any change all funds stored by
// the revenue account are distributed using old configuration. Only when the
// collected revenue amount is equal to zero the change is applied.
message ResetMsg {
  weave.Metadata metadata = 1;
  // Revenue ID reference an ID of a revenue instance that is updated.
  bytes revenue_id = 2 ;
  // Destinations holds any number of addresses that the collected revenue is
  // distributed to. Must be at least one.
  repeated Destination destinations = 3;
}
